--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Saretto Company Home Page</title>
@@ -7,6 +7,15 @@
 <body>
     <h2>Saretto Company Home Page</h2>
     <hr>
-    Welcome to the Saretto company home page!
+    <p>
+        Welcome to the Saretto company home page!
+    </p>
+
+    <!-- Add a logout button -->
+    <form action="#" th:action="@{/logout}" method="POST">
+
+        <input type="submit" value="Logout" />
+    </form>
+
 </body>
 </html>
