--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,12 +14,26 @@
 
     <hr>
 
-    <!-- display user name and role -->
+    <!-- display username and role -->
 
     <p>
         User: <span sec:authentication="principal.username"></span>
         <br><br>
         Role(s): <span sec:authentication="principal.authorities"></span>
+    </p>
+
+    <hr>
+    <!-- Add link to point to leaders ... this is for the managers -->
+    <p>
+        <a th:href="@{/leaders}">Leadership Meeting</a>
+        (Only for Manager peeps)
+    </p>
+
+    <!-- Add link to point to /systems ... this is for the admins -->
+
+    <p>
+        <a th:href="@{/systems}">IT Systems Meeting</a>
+        (Only for Admin peeps)
     </p>
 
     <hr>
